--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,9 @@
 {
+  "name": "Chrome Extension React",
+  "version": "1.0",
   "manifest_version": 2,
-  "version": "1.0.0",
-  "short_name": "React App",
-  "name": "Create React App Sample",
   "browser_action": {
-    "default_popup": "index.html",
-    "default_title": "Open the popup"
-  }
+    "default_popup": "index.html"
+  },
+  "content_security_policy": "script-src 'self' 'sha256-Kp7dNCi3neIWMIuhIQY8OWZcPT2NKq2ssH+CwZorvpE='; object-src 'self'"
 }
